--- a/src/App.css
+++ b/src/App.css
@@ -19,12 +19,124 @@
 }
 
 @keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
 }
 
-.container{
+.container {
   align-items: center;
   width: 90%;
-  
+}
+
+.react-modal__overlay {
+  background-color: rgba(177, 175, 175, 0.6);
+  z-index: 1000;
+}
+
+.react-modal__content {
+  max-width: 500px;
+  margin: auto;
+  padding: 20px;
+  border-radius: 8px;
+  height: 400px;
+}
+
+.button-container {
+  display: flex;
+  justify-content: center;
+  margin-top: 20px;
+}
+
+.yes-button {
+  background-color: #dc3545;
+  color: #fff;
+  padding: 10px 20px;
+  border-radius: 4px;
+  cursor: pointer;
+  margin-right: 10px;
+}
+
+.no-button {
+  background-color: #007bff;
+  color: #fff;
+  padding: 10px 20px;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+input[type="text"] {
+  margin-bottom: 10px;
+  padding: 8px 12px;
+  border-radius: 4px;
+  border: 1px solid #ccc;
+  width: 100%;
+  box-sizing: border-box;
+  font-size: 16px;
+}
+
+.inputBox {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 20px;
+  border: 1px solid #ccc;
+  border-radius: 30px;
+  max-width: 800px;
+  margin: 50px auto;
+}
+
+.modal-container {
+  max-width: 800px;
+  margin: auto;
+  padding: 20px;
+  border-radius: 20px 10px;
+}
+
+.modal-overlay {
+  background-color: rgba(170, 168, 168, 0.6);
+}
+
+.comment-input {
+  margin-bottom: 10px;
+  padding: 8px 12px;
+  border-radius: 4px;
+  border: 1px solid #ccc;
+  width: 100%;
+  box-sizing: border-box;
+  font-size: 16px;
+}
+
+.add-comment-button {
+  background-color: #007bff;
+  color: #fff;
+  padding: 10px 20px;
+  border-radius: 4px;
+  cursor: pointer;
+  margin-right: 10px;
+}
+
+.comment-list-container {
+  max-height: 400px;
+  overflow-y: auto;
+}
+
+.comment-list {
+  list-style: none;
+  padding: 0;
+  margin: 20px 0;
+}
+
+.no-comments {
+  background-color: #f5f5f5;
+  padding: 10px;
+  margin-bottom: 10px;
+  border-radius: 4px;
+}
+
+.comment-item {
+  background-color: #f5f5f5;
 }
